--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
 <h2>Meet our team</h2>
 
     <ul>
-    <pLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-    <li><img src="./card9(2).jpg" alt="Matthew Dix">
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+    <li><img src="./images/card9(2).jpg" alt="Matthew Dix">
      <h4>Matthew Dix</h4>
      <p>Graphic Design</p>
     </li>
-    <li><img src=".card10.jpg" alt="Christopher Campbell">
+    <li><img src=".images/card10.jpg" alt="Christopher Campbell">
         <h4>Christopher Campbell</h4>
         <p>Branding/UX design</p>
     </li>
     <li>
-<img src="./third-man1.jpg" alt="Michael Fertig ">
+<img src="./images/third-man1.jpg" alt="Michael Fertig ">
 <h4>Michael Fertig </h4>
 <p>Developer</p>
     </li>
