--- a/index.html
+++ b/index.html
@@ -3,28 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <title>MoGo</title>
 </head>
 <body>
-    <header>
-   <a href="./index.html">MoGo</a>
-    <nav>
-      <ul>
-      <li>
-        <a href="#">ABOUT</a>
+    <header class="header">
+   <a href="./index.html" class="logo">MoGo</a>
+    <nav class="navigation">
+      <ul class="nav-list">
+      <li class="nav-item">
+        <a href="#"  class="nav-list-link">ABOUT</a>
       </li>
 
-      <li>
-      <a href="#">SERVICE</a>
+      <li class="nav-list-item">
+      <a href="#" class="nav-list-link">SERVICE</a>
     </li>
-    <li>
-        <a href="#">WORK</a>
+    <li class="nav-list-item">
+        <a href="#" class="nav-list-link">WORK</a>
       </li>
-      <li>
-        <a href="#">BLOG</a>
+      <li class="nav-list-item">
+        <a href="#" class="nav-list-link">BLOG</a>
       </li>
-      <li>
-        <a href="#">CONTACT</a>
+      <li class="nav-list-item">
+        <a href="#" class="nav-list-link">CONTACT</a>
       </li>
 
       </ul>
@@ -33,68 +37,70 @@
     </nav>
 
     </header>
-    <main>
-        <section>
-<h3>We work with</h3>
-<h2>Amazing Services</h2>
+    <main class="main">
+        <section class="team">
+<h3 class="team-info">We work with</h3>
+<h2 class="team-info2">Amazing Services</h2>
 
-<ul>
-<li>
-    <h2>photography</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+<ul class="team-list">
+<li class="team-item">
+    <h2 class="team-list-title" >photography</h2>
+    <p class="team-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
 </li>
-<li>
-    <h2>photography</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+<li class="team-item">
+    <h2 class="team-list-title">photography</h2>
+    <p class="team-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
 </li>
-<li>
-    <h2>photography</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+<li class="team-item">
+    <h2 class="team-list-title">photography</h2>
+    <p class="team-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
 </li>
-<li>
-    <h2>photography</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+<li class="team-item">
+    <h2 class="team-list-title">photography</h2>
+    <p class="team-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
 </li>
-<li>
-    <h2>photography</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+<li class="team-item">
+    <h2 class="team-list-title">photography</h2>
+    <p class="team-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
 </li>
-<li>
-    <h2>photography</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+<li class="team-item">
+    <h2 class="team-list-title">photography</h2>
+    <p class="team-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
 </li>
 
 </ul>
 
 </section>
-<section>
-<h4>Who we are</h4>
-<h2>Meet our team</h2>
+<section class="our-team">
+<h4 class="our-team-info">Who we are</h4>
+<h2 class="our-team-info2">Meet our team</h2>
 
-    <ul>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-    <li><img src="./images/card9(2).jpg" alt="Matthew Dix">
-     <h4>Matthew Dix</h4>
-     <p>Graphic Design</p>
+    <ul class="our-team-list">
+    <p class="our-team-list-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+    <li class="our-team-list-item">
+        <img src="./images/card9.jpg" alt="Matthew Dix" class="our-team-image">
+     <h4 class="our-team-list-title">Matthew Dix</h4>
+     <p class="our-team-list-description">Graphic Design</p>
     </li>
-    <li><img src=".images/card10.jpg" alt="Christopher Campbell">
-        <h4>Christopher Campbell</h4>
-        <p>Branding/UX design</p>
+    <li class="our-team-list-item">
+        <img src=".images/card10.jpg" alt="Christopher Campbell" class="our-team-image">
+        <h4 class="our-team-list-title">Christopher Campbell</h4>
+        <p class="our-team-list-description">Branding/UX design</p>
     </li>
-    <li>
-<img src="./images/third-man1.jpg" alt="Michael Fertig ">
-<h4>Michael Fertig </h4>
-<p>Developer</p>
+    <li class="our-team-list">
+<img src="./images/third-man1.jpg" alt="Michael Fertig " class="our-team-image">
+<h4 class="our-team-list-title">Michael Fertig </h4>
+<p class="our-team-list-description">Developer</p>
     </li>
     </ul>
 </section>
 
     </main>
-    <footer>
-        <form>
-        <p>&copy; 2016 MoGo free PSD template by Laaqiq</p>
-        <input type="email" placeholder="Your Email..."> 
-        <button type="submit">Subscribe</button>
+    <footer class="footer">
+        <form class="footer-form">
+        <p class="footer-form-description">&copy; 2016 MoGo free PSD template by <span class="footer-orange">Laaqiq</p>
+        <input class="footer-placeholder" type="email" placeholder="Your Email..."> 
+        <button class="button" type="submit">Subscribe</button>
         </form>
     </footer>
 </body>
